@@ -35,6 +35,8 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ComponentAdapter;
 import java.awt.event.ComponentEvent;
 import java.awt.event.InputEvent;
+import java.awt.event.ItemEvent;
+import java.awt.event.ItemListener;
 import java.awt.event.KeyAdapter;
 import java.awt.event.KeyEvent;
 import java.awt.event.MouseAdapter;
@@ -46,6 +48,8 @@ import java.util.Vector;
 
 import javax.swing.AbstractAction;
 import javax.swing.Action;
+import javax.swing.DefaultComboBoxModel;
+import javax.swing.JComboBox;
 import javax.swing.JFileChooser;
 import javax.swing.JList;
 import javax.swing.JMenu;
@@ -116,8 +120,9 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 	private ModulesFile parsedModel;
 	private boolean newPathAfterReceiveParseNotification, newPathPlotAfterReceiveParseNotification;
 	private boolean chooseInitialState;
+	private boolean stratShow;
 
-	private Values lastConstants, lastPropertyConstants, lastInitialState;
+	private Values lastPropertyConstants, lastInitialState;
 	private boolean computing;
 
 	// Config/options
@@ -202,8 +207,6 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 
 		pathTable.setModel(pathTableModel);
 
-		lastConstants = null;
-
 		lastPropertyConstants = null;
 
 		lastInitialState = null;
@@ -245,6 +248,11 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 	public void setGUIProb(GUIMultiProperties guiProp)
 	{
 		this.guiProp = guiProp;
+	}
+
+	public SimulatorEngine getSimulatorEngine()
+	{
+		return engine;
 	}
 
 	public JList getStateLabelList()
@@ -394,15 +402,15 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			//       (for path formulae display)
 			UndefinedConstants uCon = new UndefinedConstants(parsedModel, pf, true);
 			if (uCon.getMFNumUndefined() + uCon.getPFNumUndefined() > 0) {
-				int result = GUIConstantsPicker.defineConstantsWithDialog(getGUI(), uCon, lastConstants, lastPropertyConstants);
+				Values lastModelConstants = getPrism().getUndefinedModelValues();
+				int result = GUIConstantsPicker.defineConstantsWithDialog(getGUI(), uCon, lastModelConstants, lastPropertyConstants);
 				if (result != GUIConstantsPicker.VALUES_DONE)
 					return;
 			}
 			// remember constant values for next time
-			lastConstants = uCon.getMFConstantValues();
 			lastPropertyConstants = uCon.getPFConstantValues();
 			// store constants (currently, compute non-exact for simulation)
-			getPrism().setPRISMModelConstants(lastConstants, false);
+			getPrism().setPRISMModelConstants(uCon.getMFConstantValues(), false);
 			pf.setSomeUndefinedConstants(lastPropertyConstants, false);
 
 			// check here for possibility of multiple initial states
@@ -432,11 +440,15 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			
 			// Create a new path in the simulator and add labels/properties
 			getPrism().loadModelIntoSimulator();
+			getPrism().loadStrategyIntoSimulator();
 			engine.createNewPath();
 			setPathActive(true);
 			repopulateFormulae(pf);
 			engine.initialisePath(initialState == null ? null : new parser.State(initialState, parsedModel));
 			// Update model/path/tables/lists
+			if (engine.hasStrategyInfo()) {
+				stratCombo.setSelectedItem("Enforce");
+			}
 			pathTableModel.setPath(engine.getPathFull());
 			pathTableModel.restartPathTable();
 			pathTable.getSelectionModel().setSelectionInterval(0, 0);
@@ -675,6 +687,13 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 		try {
 			if (currentUpdatesTable.getSelectedRow() == -1)
 				throw new PrismException("No current update is selected");
+			if (engine.hasStrategyInfo() && engine.isStrategyEnforced()) {
+				if (!engine.isTransitionEnabledByStrategy(currentUpdatesTable.getSelectedRow())) {
+					if (questionYesNo("This update is not selected by the current strategy. Execute it anyway?") != 0) {
+						return;
+					}
+				}
+			}
 			if (displayPathLoops && pathTableModel.isPathLooping()) {
 				if (questionYesNo("The current path contains a deterministic loop. \nDo you wish to disable detection of such loops and extend the path anyway?") == 0) {
 					displayPathLoops = false;
@@ -811,14 +830,13 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			// if necessary, get values for undefined constants from user
 			UndefinedConstants uCon = new UndefinedConstants(parsedModel, null);
 			if (uCon.getMFNumUndefined() > 0) {
-				int result = GUIConstantsPicker.defineConstantsWithDialog(getGUI(), uCon, lastConstants, lastPropertyConstants);
+				Values lastModelConstants = getPrism().getUndefinedModelValues();
+				int result = GUIConstantsPicker.defineConstantsWithDialog(getGUI(), uCon, lastModelConstants, lastPropertyConstants);
 				if (result != GUIConstantsPicker.VALUES_DONE)
 					return;
 			}
-			// remember constant values for next time
-			lastConstants = uCon.getMFConstantValues();
 			// store constants (currently, compute non-exact for simulation)
-			getPrism().setPRISMModelConstants(lastConstants, false);
+			getPrism().setPRISMModelConstants(uCon.getMFConstantValues(), false);
 
 			// do we need to ask for an initial state for simulation?
 			// no: just use default/random
@@ -834,8 +852,12 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 				}
 			}
 
+			// Initialise path creation 
+			getPrism().loadModelIntoSimulator();
+			getPrism().loadStrategyIntoSimulator();
+			
 			// Get path details from dialog
-			GUIPathPlotDialog pathPlotDialog = GUIPathPlotDialog.showDialog(getGUI(), parsedModel);
+			GUIPathPlotDialog pathPlotDialog = GUIPathPlotDialog.showDialog(getGUI(), this, parsedModel);
 			if (pathPlotDialog == null)
 				return;
 			String simPathDetails = pathPlotDialog.getSimPathString();
@@ -843,8 +865,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 				return;
 			long maxPathLength = pathPlotDialog.getMaxPathLength();
 
-			// Create a new path in the simulator and plot it 
-			getPrism().loadModelIntoSimulator();
+			// Create a new path in the simulator and plot it
 			a_clearPath();
 			setComputing(true);
 			guiProp.tabToFront();
@@ -1037,6 +1058,8 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 
 		typeExploreCombo.setEnabled(pathActive);
 		typeBacktrackCombo.setEnabled(pathActive);
+		
+		stratCombo.setEnabled(parsedModel != null && !computing && engine.hasStrategyInfo());
 
 		currentUpdatesTable.setEnabled(pathActive && !computing);
 		currentUpdatesTable.setToolTipText(currentUpdatesTable.isEnabled() ? "Double click on an update to manually execute it" : null);
@@ -1131,6 +1154,9 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 		noStepsBacktrackPanel = new javax.swing.JPanel();
 		typeBacktrackCombo = new javax.swing.JComboBox();
 		inputBacktrackField = new javax.swing.JTextField();
+		strategyPanel = new javax.swing.JPanel();
+		innerStrategyPanel = new javax.swing.JPanel();
+		stratCombo = new JComboBox<>();
 		manualUpdatesPanel = new javax.swing.JPanel();
 		innerManualUpdatesPanel = new javax.swing.JPanel();
 		manualUpdateTableScrollPane = new javax.swing.JScrollPane();
@@ -1459,6 +1485,46 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 
 		leftExplorePanel.add(backtrackPanel);
 
+		strategyPanel.setLayout(new java.awt.BorderLayout());
+		strategyPanel.setBorder(javax.swing.BorderFactory.createTitledBorder("Strategy"));
+		strategyPanel.setMinimumSize(new java.awt.Dimension(129, 0));
+		innerStrategyPanel.setLayout(new java.awt.GridLayout(1, 1, 5, 5));
+		innerStrategyPanel.setBorder(javax.swing.BorderFactory.createEmptyBorder(5, 5, 5, 5));
+		innerStrategyPanel.setMinimumSize(new java.awt.Dimension(117, 0));
+		stratCombo.setModel(new DefaultComboBoxModel<>(new String[] { "Hide", "Show", "Enforce" }));
+		stratCombo.setToolTipText("How to treat current strategy");
+		stratCombo.addItemListener(new ItemListener() {
+			public void itemStateChanged(ItemEvent e)
+			{
+				if (e.getStateChange() == ItemEvent.SELECTED) {
+					switch (e.getItem().toString()) {
+					case "Hide":
+						stratShow = false;
+						engine.setStrategyEnforced(false);
+						break;
+					case "Show":
+						stratShow = true;
+						engine.setStrategyEnforced(false);
+						break;
+					case "Enforce":
+						stratShow = true;
+						engine.setStrategyEnforced(true);
+						break;
+					}
+				}
+				try {
+					updateTableModel.updateUpdatesTable(pathTable);
+					pathTableModel.updatePathTable();
+				} catch (PrismException ex) {
+					GUISimulator.this.error(ex.getMessage());
+				}
+			}
+		});
+		
+		innerStrategyPanel.add(stratCombo);
+		strategyPanel.add(innerStrategyPanel, java.awt.BorderLayout.CENTER);
+		leftExplorePanel.add(strategyPanel);
+
 		outerLeftExplorePanel.add(leftExplorePanel, java.awt.BorderLayout.NORTH);
 
 		innerTopLeftPanel.add(outerLeftExplorePanel, java.awt.BorderLayout.WEST);
@@ -1634,7 +1700,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 		};
 
 		newPath.putValue(Action.LONG_DESCRIPTION, "Creates a new path.");
-		newPath.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_N));
+		newPath.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_N));
 		newPath.putValue(Action.NAME, "New path");
 		newPath.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallStates.png"));
 		newPath.putValue(Action.ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_F8, 0));
@@ -1649,7 +1715,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 		};
 
 		newPathFromState.putValue(Action.LONG_DESCRIPTION, "Creates a new path from a chosen state.");
-		//newPathFromState.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_N));
+		//newPathFromState.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_N));
 		newPathFromState.putValue(Action.NAME, "New path from state");
 		newPathFromState.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallStates.png"));
 
@@ -1661,7 +1727,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			}
 		};
 		newPathPlot.putValue(Action.LONG_DESCRIPTION, "Creates and plots a new path.");
-		//newPathPlot.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_N));
+		//newPathPlot.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_N));
 		newPathPlot.putValue(Action.NAME, "Plot new path");
 		newPathPlot.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallFileGraph.png"));
 		newPathPlot.putValue(Action.ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_F8, Toolkit.getDefaultToolkit().getMenuShortcutKeyMask()));
@@ -1674,7 +1740,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			}
 		};
 		newPathPlotFromState.putValue(Action.LONG_DESCRIPTION, "Creates and plots a new path from a chosen state.");
-		//newPathPlotFromState.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_N));
+		//newPathPlotFromState.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_N));
 		newPathPlotFromState.putValue(Action.NAME, "Plot new path from state");
 		newPathPlotFromState.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallFileGraph.png"));
 
@@ -1687,7 +1753,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 		};
 
 		resetPath.putValue(Action.LONG_DESCRIPTION, "Resets the path.");
-		resetPath.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_R));
+		resetPath.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_R));
 		resetPath.putValue(Action.NAME, "Reset path");
 		resetPath.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallPlayerStart.png"));
 		resetPath.putValue(Action.ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_F8, InputEvent.SHIFT_DOWN_MASK));
@@ -1701,7 +1767,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 		};
 
 		exportPath.putValue(Action.LONG_DESCRIPTION, "Exports the path.");
-		exportPath.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_X));
+		exportPath.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_X));
 		exportPath.putValue(Action.NAME, "Export path");
 		exportPath.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallExport.png"));
 
@@ -1713,7 +1779,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			}
 		};
 		plotPath.putValue(Action.LONG_DESCRIPTION, "Plots the path on a graph.");
-		plotPath.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_P));
+		plotPath.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_P));
 		plotPath.putValue(Action.NAME, "Plot path");
 		plotPath.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallFileGraph.png"));
 
@@ -1725,7 +1791,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			}
 		};
 		randomExploration.putValue(Action.LONG_DESCRIPTION, "Extends the path by simulating.");
-		randomExploration.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_S));
+		randomExploration.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_S));
 		randomExploration.putValue(Action.NAME, "Simulate");
 		randomExploration.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallPlayerFwd.png"));
 		randomExploration.putValue(Action.ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_F9, 0));
@@ -1738,7 +1804,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			}
 		};
 		backtrack.putValue(Action.LONG_DESCRIPTION, "Backtracks the path.");
-		backtrack.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_K));
+		backtrack.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_K));
 		backtrack.putValue(Action.NAME, "Backtrack");
 		backtrack.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallPlayerRew.png"));
 		backtrack.putValue(Action.ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_F9, InputEvent.SHIFT_DOWN_MASK));
@@ -1751,7 +1817,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			}
 		};
 		backtrackToHere.putValue(Action.LONG_DESCRIPTION, "Backtracks the path to the selected state.");
-		backtrackToHere.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_B));
+		backtrackToHere.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_B));
 		backtrackToHere.putValue(Action.NAME, "Backtrack to here");
 		backtrackToHere.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallPlayerRew.png"));
 
@@ -1768,7 +1834,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			}
 		};
 		removeToHere.putValue(Action.LONG_DESCRIPTION, "Removes states preceding the selected state from the path.");
-		removeToHere.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_R));
+		removeToHere.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_R));
 		removeToHere.putValue(Action.NAME, "Remove preceding steps");
 		removeToHere.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallRemove.png"));
 
@@ -1780,7 +1846,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			}
 		};
 		configureView.putValue(Action.LONG_DESCRIPTION, "Configures the view.");
-		configureView.putValue(Action.MNEMONIC_KEY, new Integer(KeyEvent.VK_C));
+		configureView.putValue(Action.MNEMONIC_KEY, Integer.valueOf(KeyEvent.VK_C));
 		configureView.putValue(Action.NAME, "Configure view");
 		configureView.putValue(Action.SMALL_ICON, GUIPrism.getIconFromImage("smallOptions.png"));
 
@@ -2061,7 +2127,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 	public void setDisplayStyle(boolean displayStyle) throws PrismException
 	{
 
-		getPrism().getSettings().set(PrismSettings.SIMULATOR_RENDER_ALL_VALUES, new Integer(displayStyle ? 0 : 1));
+		getPrism().getSettings().set(PrismSettings.SIMULATOR_RENDER_ALL_VALUES, Integer.valueOf(displayStyle ? 0 : 1));
 
 	}
 
@@ -2081,7 +2147,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 	public void setDisplayPathLoops(boolean b) throws PrismException
 	{
 		displayPathLoops = b;
-		//getPrism().getSettings().set(PrismSettings.SIMULATOR_????, new Boolean(b));
+		//getPrism().getSettings().set(PrismSettings.SIMULATOR_????, Boolean.valueOf(b));
 	}
 
 	public ModulesFile getModulesFile()
@@ -2099,10 +2165,9 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			if (pathTable.getSelectedRowCount() == 0) {
 				int last = pathTable.getRowCount() - 1;
 				pathTable.getSelectionModel().setSelectionInterval(last, last);
-				updateTableModel.updateUpdatesTable();
 			}
 			// Update transition table according to reflect currently selected step
-			updateTableModel.updateUpdatesTable(pathTable.getSelectedRow());
+			updateTableModel.updateUpdatesTable(pathTable);
 			stateLabelList.repaint();
 			pathFormulaeList.repaint();
 		} catch (PrismException ex) {
@@ -2117,6 +2182,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 	private javax.swing.JPanel automaticExplorationPanel;
 	javax.swing.JButton backtrackButton;
 	private javax.swing.JPanel backtrackPanel;
+	private javax.swing.JPanel strategyPanel;
 	private javax.swing.JPanel bottomLabels;
 	private javax.swing.JPanel bottomPanel;
 	private javax.swing.JPanel bottomValues;
@@ -2130,6 +2196,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 	private javax.swing.JPanel informationPanel;
 	private javax.swing.JPanel innerAutomaticExplorationPanel;
 	private javax.swing.JPanel innerBacktrackPanel;
+	private javax.swing.JPanel innerStrategyPanel;
 	private javax.swing.JPanel innerButtonPanel;
 	private javax.swing.JPanel innerInformationPanel;
 	private javax.swing.JPanel innerManualUpdatesPanel;
@@ -2174,6 +2241,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 	private javax.swing.JLabel totalTimeLabel;
 	private javax.swing.JComboBox typeBacktrackCombo;
 	private javax.swing.JComboBox typeExploreCombo;
+	private javax.swing.JComboBox<String> stratCombo;
 
 	// End of variables declaration//GEN-END:variables
 
@@ -2224,8 +2292,13 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 		repaint();
 	}
 
+	public boolean isStrategyShown()
+	{
+		return stratShow;
+	}
+	
 	enum UpdateTableModelColumn {
-		ACTION, PROB, UPDATE
+		STRAT, ACTION, PROB, UPDATE
 	};
 	
 	class UpdateTableModel extends AbstractTableModel
@@ -2241,11 +2314,17 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			oldStep = -1;
 		}
 
+		@Override
 		public int getColumnCount()
 		{
-			return visibleColumns.size();
+			if (pathActive) {
+				return visibleColumns.size();
+			} else {
+				return 0;
+			}
 		}
 
+		@Override
 		public int getRowCount()
 		{
 			try {
@@ -2255,11 +2334,14 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			}
 		}
 
+		@Override
 		public Object getValueAt(int rowIndex, int columnIndex)
 		{
-			if (pathActive) {
+			if (pathActive && columnIndex < visibleColumns.size()) {
 				try {
 					switch (visibleColumns.get(columnIndex)) {
+					case STRAT:
+						return engine.getStrategyDecisionString(rowIndex);
 					case ACTION:
 						return engine.getTransitionActionString(rowIndex);
 					case PROB:
@@ -2276,10 +2358,13 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			return "";
 		}
 
+		@Override
 		public String getColumnName(int columnIndex)
 		{
-			if (pathActive) {
+			if (pathActive && columnIndex < visibleColumns.size()) {
 				switch (visibleColumns.get(columnIndex)) {
+				case STRAT:
+					return "Strategy";
 				case ACTION:
 					return engine.getModel().getActionStringDescription();
 				case PROB:
@@ -2305,6 +2390,7 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 			oldStep = -1;
 			setVisibleColumns();
 			doEnables();
+			fireTableStructureChanged();
 			fireTableDataChanged();
 			currentUpdatesTable.setEnabled(true);
 			currentUpdatesTable.setToolTipText("Double click on an update to manually execute it");
@@ -2314,19 +2400,21 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 		}
 
 		/**
-		 * Update the updates table to display the available transitions in a particular path step.
+		 * Update the updates table to display the available transitions in the currently selected path step.
 		 */
-		public void updateUpdatesTable(int oldStep) throws PrismException
+		public void updateUpdatesTable(JTable pathTable) throws PrismException
 		{
-			if (oldStep == pathTable.getRowCount() - 1) {
-				// if current state selected
+			int step = pathTable.getSelectedRow();
+			if (step == -1 || step == pathTable.getRowCount() - 1) {
+				// if current (or no) state selected
 				updateUpdatesTable();
 			} else {
-				this.oldStep = oldStep;
+				this.oldStep = step;
 				oldUpdate = true;
 				setVisibleColumns();
 				doEnables();
 				engine.computeTransitionsForStep(oldStep);
+				fireTableStructureChanged();
 				fireTableDataChanged();
 				currentUpdatesTable.setEnabled(false);
 				currentUpdatesTable.setToolTipText(null);
@@ -2336,10 +2424,13 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 				}
 			}
 		}
-
+		
 		public void setVisibleColumns()
 		{
 			visibleColumns.clear();
+			if (stratShow && engine.hasStrategyInfo()) {
+				visibleColumns.add(UpdateTableModelColumn.STRAT);
+			}
 			visibleColumns.add(UpdateTableModelColumn.ACTION);
 			if (parsedModel != null && parsedModel.getModelType().isProbabilistic()) {
 				visibleColumns.add(UpdateTableModelColumn.PROB);
@@ -2365,8 +2456,22 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 				return -1;
 			}
 		}
-	}
 
+		public boolean isEnabledByStrategy(int row)
+		{
+			try {
+				return engine.isTransitionEnabledByStrategy(row);
+			} catch (PrismException e) {
+				return true;
+			}
+		}
+		
+		public boolean isNondetModel()
+		{
+			return engine.getModel().getModelType().nondeterministic();
+		}
+	}
+	
 	public void notifySettings(PrismSettings settings)
 	{
 		displayStyleFast = settings.getInteger(PrismSettings.SIMULATOR_RENDER_ALL_VALUES) == 0;
@@ -2381,11 +2486,10 @@ public class GUISimulator extends GUIPlugin implements MouseListener, ListSelect
 	}
 
 	/**
-	 * Utility function to format floating point numbers.
+	 * Utility function to format floating point numbers with a precision of 6 decimal places.
 	 */
 	public String formatDouble(double d)
 	{
-		// getPrism().getSettings().
 		return PrismUtils.formatDouble(6, d);
 	}
 }
